# COMP3431_Pepper_Visual-SLAM_ROS2

./: README.md  frames_2025-11-20_19.29.42.gv  frames_2025-11-20_19.38.57.gv  frames_2025-11-20_19.43.33.gv  frames_2025-11-20_20.00.59.gv
install/: local_setup.sh  setup.sh
install/key_teleop/lib/key_teleop/: key_teleop
install/key_teleop/share/key_teleop/: package.sh
install/nao_meshes/share/nao_meshes/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/naoqi_bridge_msgs/share/naoqi_bridge_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/naoqi_driver/lib/naoqi_driver/: naoqi_driver_node
install/naoqi_driver/share/naoqi_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.sh  package.xml  package.zsh
install/naoqi_libqi/include/ka/: AUTHORS  README.md  algorithm.hpp  base64.hpp  concept.hpp  conceptpredicate.hpp  empty.hpp  errorhandling.hpp  flatten.hpp  functional.hpp  functor.hpp  functorcontainer.hpp  indexed.hpp  integersequence.hpp  iterator.hpp  macro.hpp  macroregular.hpp  memory.hpp  moveoncopy.hpp  mutablestore.hpp  mutex.hpp  opt.hpp  parse.hpp  productiter.hpp  range.hpp  relationpredicate.hpp  scoped.hpp  sha1.hpp  src.hpp  testutils.hpp  typetraits.hpp  unit.hpp  uri.hpp  utility.hpp  zero.hpp
install/naoqi_libqi/include/qi/: actor.hpp  anyfunction.hpp  anymodule.hpp  anyobject.hpp  anyvalue.hpp  api.hpp  application.hpp  applicationsession.hpp  assert.hpp  async.hpp  atomic.hpp  binarycodec.hpp  buffer.hpp  clock.hpp  config.dox  config.hpp  config.hpp.in  either.hpp  eventloop.hpp  flags.hpp  future.hpp  futuregroup.hpp  getenv.hpp  iocolor.hpp  log.hpp  (+26 more)
install/rtabmap/lib/: librtabmap_gui.so.0.23  librtabmap_utilite.so.0.23  librtabmap_utilite.so.0.23.3
install/transform/share/transform/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
naoqi_bridge_msgs/: README.md
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/key_teleop/key_teleop/: key_teleop.py
src/log/: latest_build
src/pepper_wall_follower/: CMakeLists.txt  package.xml
src/pepper_wall_follower/include/pepper_wall_follower/: pepper_wall_follower.hpp
src/pepper_wall_follower/launch/: pepper_wall_follower.launch.py
src/pepper_wall_follower/src/: pepper_wall_follower.cpp
src/transform/: setup.cfg  setup.py
src/transform/launch/: transforms.launch.py
src/transform/transform/: transform.py
src/wall_follower/: landmarks.csv  startup.bash
src/wall_follower/scripts/: point_transformer.py  see_marker.py
src/wall_follower/src/: ._wall_follower.cpp  wall_follower.cpp
src/wall_follower/wall_follower/: landmark.py
(+2355 files in other folders)
